<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#F6F5F2"
    tools:context=".Activity.CartActivity">

    <!-- Back button -->
    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Cart title -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/my_cart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBack"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- RecyclerView for cart items -->

    <!-- Coupon input section -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/layoutCuppon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <LinearLayout
        android:id="@+id/layoutCuppon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/coupon_background"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartItems">

        <EditText
            android:id="@+id/edtCuppon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/enter_your_coupon"
            android:padding="8dp"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/btnCuppoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFB200"
            android:padding="8dp"
            android:text="@string/apply"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/coupon_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layoutSumary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutCuppon">

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="14dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address"
            android:textColor="#000000"
            android:padding="16dp"
            android:layout_weight="3"/>
    </LinearLayout>


    <!-- Order summary section -->
    <LinearLayout
        android:id="@+id/layoutSumary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:backgroundTint="#E0FBE2"
        android:background="@drawable/summary_background"
        app:layout_constraintBottom_toTopOf="@id/buttonCheckout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtotal"
                android:textSize="16sp"
                android:textColor="@color/priramy_text" />
            <TextView
                android:id="@+id/txtSubtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$40.0"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delivery"
                android:textSize="16sp"
                android:textColor="@color/priramy_text" />
            <TextView
                android:id="@+id/txtDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$10.0"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_tax"
                android:textSize="16sp"
                android:textColor="@color/priramy_text" />
            <TextView
                android:id="@+id/txtTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0.8"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total"
                android:textSize="16sp"
                android:textColor="@color/priramy_text" />
            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$50.0"
                android:textSize="16sp"
                android:textColor="#FF0000"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <!-- Checkout button -->
    <Button
        android:id="@+id/buttonCheckout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/check_out"
        android:backgroundTint="#FFB200"
        android:textColor="@android:color/white"
        android:padding="16dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>