<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_24sdp"
    tools:context=".Activity.SignInActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:src="@drawable/logo1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        android:textColor="@color/priramy_text"
        app:layout_constraintTop_toBottomOf="@id/imageLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/textLoginToContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/login_to_continue"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:textColor="@color/priramy_text"
        app:layout_constraintTop_toBottomOf="@id/textWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/secondary_text"
        android:textColor="@color/secondary_text"
        android:background="@drawable/background_input"
        android:paddingStart="@dimen/_6sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textSize="@dimen/_13ssp"
        android:drawableStart="@drawable/ic_email1"
        android:drawablePadding="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/textLoginToContinue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmail">

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/ic_lock1"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_6sdp"
            android:paddingEnd="@dimen/_6sdp"
            android:textColor="@color/secondary_text"
            android:textColorHint="@color/secondary_text"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonTogglePassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonTogglePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/toggle_password_visibility"
            android:drawableEnd="@drawable/ic_eye"
            android:drawableTint="@color/secondary_text"
            app:layout_constraintBottom_toBottomOf="@id/inputPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/inputPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignIn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/buttonSignIn"
        app:layout_constraintBottom_toBottomOf="@id/buttonSignIn"
        app:layout_constraintStart_toStartOf="@id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="@id/buttonSignIn"/>

    <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="@dimen/_2sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/secondary_text"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="@string/create_new_account"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        android:textColor="@color/priramy_text"
        app:layout_constraintTop_toBottomOf="@id/textForgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
